[gd_scene load_steps=7 format=3 uid="uid://cfe7ri5jiti47"]

[ext_resource type="Script" path="res://experimental/spawner.gd" id="1_kbh3w"]
[ext_resource type="PackedScene" uid="uid://cqh07empuga21" path="res://player_character/player_character.tscn" id="2_xpw0w"]

[sub_resource type="Animation" id="Animation_0sms0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_pacth"]
resource_name = "death"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.06667),
"transitions": PackedFloat32Array(2, 0),
"update": 0,
"values": [Color(0, 0, 0, 0.0784314), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_hhwuh"]
resource_name = "start"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c5wy1"]
_data = {
"RESET": SubResource("Animation_0sms0"),
"death": SubResource("Animation_pacth"),
"start": SubResource("Animation_hhwuh")
}

[node name="Spawner" type="Node2D"]
script = ExtResource("1_kbh3w")
player_character = ExtResource("2_xpw0w")

[node name="SpawnPoint" type="Marker2D" parent="."]

[node name="Label" type="Label" parent="SpawnPoint"]
offset_left = -50.0
offset_top = -34.0
offset_right = 60.0
offset_bottom = -11.0
text = "SPAWN POINT"

[node name="ScreenTransitions" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c5wy1")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="animation_finished" from="ScreenTransitions" to="." method="_on_screen_transitions_animation_finished"]
